New version of SliverTabBar, added Localized Strings, and Header and Text block

--- a/l10n/app_ru.arb
+++ b/l10n/app_ru.arb
@@ -1,4 +1,28 @@
 {
-  "appTitle": "Flutter i18n Demo",
-  "pushCount": "You have pushed the button this many times:"
+  "userName": "Екатерина",
+  "profile": "Профиль",
+  "settings": "Настройки",
+  "services": "У вас подключено",
+  "servicesText": "Подписки, автоплатежи и сервисы на которыевы подписались",
+  "sberPrime": "СберПрайм",
+  "paymentDate": "Платеж 9 июля",
+  "paymentPrice": "199₽ в месяц",
+  "transfer": "Переводы",
+  "paymentDate2": "Автопродление 21 августа",
+  "tariffs": "Тарифы и лимиты",
+  "operations": "Для операций в Сбербанк Онлайн",
+  "dailyLimit": "Изменить суточный лимит",
+  "limitText": "На платежи и переводы",
+  "transferWithoutCommision": "Переводы без комиссии",
+  "transferText": "Показать остаток в этом месяце",
+  "transferInfo": "Информация о тарифах и лимитах",
+  "interests": "Интересы",
+  "interestsDescription": "Мы подбираем истории и предложения по темам, которые вам нравятся",
+  "food": "Еда",
+  "home": "Дом",
+  "selfcare": "Забота о себе",
+  "science": "Наука",
+  "technologies": "Технологии",
+  "leisure": "Досуг",
+  "selfDevelopment": "Саморазвитие"
 }
